--- a/packages/core/client/src/locale/es-ES.json
+++ b/packages/core/client/src/locale/es-ES.json
@@ -799,5 +799,7 @@
   "Are you sure you want to hide this menu?": "¿Estás seguro de que quieres ocultar este menú?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "Después de ocultar, este menú ya no aparecerá en la barra de menú. Para mostrarlo de nuevo, debe ir a la página de administración de rutas para configurarlo.",
   "If selected, the page will display Tab pages.": "Si se selecciona, la página mostrará páginas de pestañas.",
-  "If selected, the route will be displayed in the menu.": "Si se selecciona, la ruta se mostrará en el menú."
+  "If selected, the route will be displayed in the menu.": "Si se selecciona, la ruta se mostrará en el menú.",
+  "Are you sure you want to hide this tab?": "¿Estás seguro de que quieres ocultar esta pestaña?",
+  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Después de ocultar, esta pestaña ya no aparecerá en la barra de pestañas. Para mostrarla de nuevo, deberás ir a la página de gestión de rutas para configurarla."
 }
