--- a/packages/core/client/src/locale/fr-FR.json
+++ b/packages/core/client/src/locale/fr-FR.json
@@ -819,5 +819,7 @@
   "Are you sure you want to hide this menu?": "Êtes-vous sûr de vouloir masquer ce menu ?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "Après avoir masqué, ce menu ne sera plus affiché dans la barre de menu. Pour le réafficher, vous devez aller à la page de gestion des routes pour le configurer.",
   "If selected, the page will display Tab pages.": "Si sélectionné, la page affichera des onglets.",
-  "If selected, the route will be displayed in the menu.": "Si sélectionné, la route sera affichée dans le menu."
+  "If selected, the route will be displayed in the menu.": "Si sélectionné, la route sera affichée dans le menu.",
+  "Are you sure you want to hide this tab?": "Êtes-vous sûr de vouloir masquer cet onglet ?",
+  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Après avoir masqué, cette tab ne sera plus affichée dans la barre de tab. Pour la montrer à nouveau, vous devez vous rendre sur la page de gestion des routes pour la configurer."
 }
