--- a/packages/core/client/src/locale/ko-KR.json
+++ b/packages/core/client/src/locale/ko-KR.json
@@ -910,5 +910,7 @@
   "Are you sure you want to hide this menu?": "이 메뉴를 숨기시겠습니까?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "숨기면 이 메뉴는 메뉴 바에 더 이상 표시되지 않습니다. 다시 표시하려면 라우트 관리 페이지에서 설정해야 합니다.",
   "If selected, the page will display Tab pages.": "선택되면 페이지는 탭 페이지를 표시합니다.",
-  "If selected, the route will be displayed in the menu.": "선택되면 라우트는 메뉴에 표시됩니다."
+  "If selected, the route will be displayed in the menu.": "선택되면 라우트는 메뉴에 표시됩니다.",
+  "Are you sure you want to hide this tab?": "이 탭을 숨기시겠습니까?",
+  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "숨기면 이 탭은 탭 바에 더 이상 표시되지 않습니다. 다시 표시하려면 라우트 관리 페이지에서 설정해야 합니다."
 }
