--- a/packages/core/client/src/locale/pt-BR.json
+++ b/packages/core/client/src/locale/pt-BR.json
@@ -776,5 +776,7 @@
   "Are you sure you want to hide this menu?": "Tem certeza de que deseja ocultar este menu?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "Depois de ocultar, este menu não aparecerá mais na barra de menus. Para mostrar novamente, você precisa ir à página de gerenciamento de rotas para configurá-lo.",
   "If selected, the page will display Tab pages.": "Se selecionado, a página exibirá páginas de abas.",
-  "If selected, the route will be displayed in the menu.": "Se selecionado, a rota será exibida no menu."
+  "If selected, the route will be displayed in the menu.": "Se selecionado, a rota será exibida no menu.",
+  "Are you sure you want to hide this tab?": "Tem certeza de que deseja ocultar esta guia?",
+  "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Depois de ocultar, esta guia não aparecerá mais na barra de guias. Para mostrá-la novamente, você precisa ir à página de gerenciamento de rotas para configurá-la."
 }
