--- a/packages/plugins/@nocobase/plugin-calendar/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-calendar/src/locale/en-US.json
@@ -1,22 +1,4 @@
-/**
- * This file is part of the NocoBase (R) project.
- * Copyright (c) 2020-2024 NocoBase Co., Ltd.
- * Authors: NocoBase Team.
- *
- * This project is dual-licensed under AGPL-3.0 and NocoBase Commercial License.
- * For more information, please refer to: https://www.nocobase.com/agreement.
- */
-
-/**
- * This file is part of the NocoBase (R) project.
- * Copyright (c) 2020-2024 NocoBase Co., Ltd.
- * Authors: NocoBase Team.
- *
- * This project is dual-licensed under AGPL-3.0 and NocoBase Commercial License.
- * For more information, please refer to: https://www.nocobase.com/agreement.
- */
-
-export default {
+{
   "Configure calendar": "Configure calendar",
   "Title field": "Title field",
   "Custom title": "Custom title",
@@ -61,5 +43,5 @@ export default {
   "Yearly": "Yearly",
   "Repeats": "Repeats",
   "Category field": "Category field",
-  "Not selected": "Not selected",
-};
+  "Not selected": "Not selected"
+}
