--- a/packages/plugins/@nocobase/plugin-calendar/src/locale/es-ES.json
+++ b/packages/plugins/@nocobase/plugin-calendar/src/locale/es-ES.json
@@ -1,22 +1,4 @@
-/**
- * This file is part of the NocoBase (R) project.
- * Copyright (c) 2020-2024 NocoBase Co., Ltd.
- * Authors: NocoBase Team.
- *
- * This project is dual-licensed under AGPL-3.0 and NocoBase Commercial License.
- * For more information, please refer to: https://www.nocobase.com/agreement.
- */
-
-/**
- * This file is part of the NocoBase (R) project.
- * Copyright (c) 2020-2024 NocoBase Co., Ltd.
- * Authors: NocoBase Team.
- *
- * This project is dual-licensed under AGPL-3.0 and NocoBase Commercial License.
- * For more information, please refer to: https://www.nocobase.com/agreement.
- */
-
-export default {
+{
   "Configure calendar": "Configurar calendario",
   "Title field": "Campo de título",
   "Custom title": "Título personalizado",
@@ -61,5 +43,5 @@ export default {
   "Yearly": "Anual",
   "Repeats": "se repite",
   "Category field": "Campo de Categoria",
-  "Not selected": "No seleccionado",
-};
+  "Not selected": "No seleccionado"
+}
