--- a/packages/plugins/@nocobase/plugin-calendar/src/locale/ja-JP.json
+++ b/packages/plugins/@nocobase/plugin-calendar/src/locale/ja-JP.json
@@ -1,22 +1,4 @@
-/**
- * This file is part of the NocoBase (R) project.
- * Copyright (c) 2020-2024 NocoBase Co., Ltd.
- * Authors: NocoBase Team.
- *
- * This project is dual-licensed under AGPL-3.0 and NocoBase Commercial License.
- * For more information, please refer to: https://www.nocobase.com/agreement.
- */
-
-/**
- * This file is part of the NocoBase (R) project.
- * Copyright (c) 2020-2024 NocoBase Co., Ltd.
- * Authors: NocoBase Team.
- *
- * This project is dual-licensed under AGPL-3.0 and NocoBase Commercial License.
- * For more information, please refer to: https://www.nocobase.com/agreement.
- */
-
-export default {
+{
   "Configure calendar": "カレンダーの設定",
   "Title field": "タイトルフィールド",
   "Start date field": "開始日フィールド",
@@ -61,5 +43,5 @@ export default {
   "Monthly": "毎月",
   "Yearly": "毎年",
   "Repeats": "繰り返し",
-  "Update record": "レコードを更新する",
-};
+  "Update record": "レコードを更新する"
+}
