--- a/packages/plugins/@nocobase/plugin-calendar/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-calendar/src/locale/en-US.json
@@ -42,6 +42,6 @@
   "Monthly": "Monthly",
   "Yearly": "Yearly",
   "Repeats": "Repeats",
-  "Category field": "Category field",
+  "Color field": "Color field",
   "Not selected": "Not selected"
 }
