--- a/packages/plugins/@nocobase/plugin-calendar/src/locale/es-ES.json
+++ b/packages/plugins/@nocobase/plugin-calendar/src/locale/es-ES.json
@@ -42,6 +42,6 @@
   "Monthly": "Mensual",
   "Yearly": "Anual",
   "Repeats": "se repite",
-  "Category field": "Campo de Categoria",
+  "Color field": "Campo de color",
   "Not selected": "No seleccionado"
 }
