--- a/packages/plugins/@nocobase/plugin-block-template/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-block-template/src/locale/en-US.json
@@ -32,5 +32,6 @@
   "Deleted successfully": "Deleted successfully",
   "Keep the created blocks?": "Keep the created blocks?",
   "Please select the records you want to delete": "Please select the records you want to delete",
-  "Search and select template": "Search and select template"
+  "Search and select template": "Search and select template",
+  "This is part of a template, deletion is not allowed": "This is part of a template, deletion is not allowed"
 }
