--- a/packages/plugins/@nocobase/plugin-block-template/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-block-template/src/locale/zh-CN.json
@@ -32,5 +32,6 @@
   "Deleted successfully": "删除成功",
   "Keep the created blocks?": "保留创建的区块？",
   "Please select the records you want to delete": "请选择要删除的记录",
-  "Search and select template": "搜索并选择模板"
+  "Search and select template": "搜索并选择模板",
+  "This is part of a template, deletion is not allowed": "这是模板的一部分，不允许删除"
 }
