feat: emit refresh signal

--- a/packages/plugins/@nocobase/plugin-calendar/src/locale/pl-PL.json
+++ b/packages/plugins/@nocobase/plugin-calendar/src/locale/pl-PL.json
@@ -40,6 +40,9 @@ export default {
     "Daily": "Codziennie",
     "Weekly": "Co tydzień",
     "Monthly": "Co miesiąc",
+    "Month": "Miesiąc",
+    "Year": "Rok",
+    "Day": "Dzień",
     "Yearly": "Co rok",
     "Repeats": "Powtarza się",
     "Background color field": "Pole koloru tła",
