--- a/packages/core/client/src/locale/en-US.json
+++ b/packages/core/client/src/locale/en-US.json
@@ -883,5 +883,7 @@
   "Are you sure you want to hide this menu?": "Are you sure you want to hide this menu?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.",
   "If selected, the page will display Tab pages.": "If selected, the page will display Tab pages.",
-  "If selected, the route will be displayed in the menu.": "If selected, the route will be displayed in the menu."
+  "If selected, the route will be displayed in the menu.": "If selected, the route will be displayed in the menu.",
+  "Deprecated": "Deprecated",
+  "The following old template features have been deprecated and will be removed in next version.": "The following old template features have been deprecated and will be removed in next version."
 }
