--- a/packages/core/client/src/locale/es-ES.json
+++ b/packages/core/client/src/locale/es-ES.json
@@ -148,6 +148,7 @@
   "Chart type": "Tipo del gráfico",
   "Chart config": "Configuración del gráfico",
   "Templates": "Plantillas",
+  "Template": "Plantilla",
   "Select template": "Seleccione plantilla",
   "Action logs": "Acción logs",
   "Create template": "Crear plantilla",
@@ -799,5 +800,7 @@
   "Are you sure you want to hide this menu?": "¿Estás seguro de que quieres ocultar este menú?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "Después de ocultar, este menú ya no aparecerá en la barra de menú. Para mostrarlo de nuevo, debe ir a la página de administración de rutas para configurarlo.",
   "If selected, the page will display Tab pages.": "Si se selecciona, la página mostrará páginas de pestañas.",
-  "If selected, the route will be displayed in the menu.": "Si se selecciona, la ruta se mostrará en el menú."
+  "If selected, the route will be displayed in the menu.": "Si se selecciona, la ruta se mostrará en el menú.",
+  "Deprecated": "Obsoleto",
+  "The following old template features have been deprecated and will be removed in next version.": "Las siguientes características de plantilla antigua han quedado obsoletas y se eliminarán en la próxima versión."
 }
