--- a/packages/core/client/src/locale/fr-FR.json
+++ b/packages/core/client/src/locale/fr-FR.json
@@ -159,6 +159,7 @@
   "Chart type": "Type de graphique",
   "Chart config": "Configuration du graphique",
   "Templates": "Modèles",
+  "Template": "Modèle",
   "Select template": "Sélectionner un modèle",
   "Action logs": "Logs d'action",
   "Create template": "Créer un modèle",
@@ -819,5 +820,7 @@
   "Are you sure you want to hide this menu?": "Êtes-vous sûr de vouloir masquer ce menu ?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "Après avoir masqué, ce menu ne sera plus affiché dans la barre de menu. Pour le réafficher, vous devez aller à la page de gestion des routes pour le configurer.",
   "If selected, the page will display Tab pages.": "Si sélectionné, la page affichera des onglets.",
-  "If selected, the route will be displayed in the menu.": "Si sélectionné, la route sera affichée dans le menu."
+  "If selected, the route will be displayed in the menu.": "Si sélectionné, la route sera affichée dans le menu.",
+  "Deprecated": "Déprécié",
+  "The following old template features have been deprecated and will be removed in next version.": "Les fonctionnalités des anciens modèles ont été dépréciées et seront supprimées dans la prochaine version."
 }
