--- a/packages/core/client/src/locale/ja-JP.json
+++ b/packages/core/client/src/locale/ja-JP.json
@@ -145,6 +145,7 @@
   "Chart type": "チャートタイプ",
   "Chart config": "チャート設定",
   "Templates": "テンプレート",
+  "Template": "テンプレート",
   "Select template": "テンプレートを選択してください",
   "Action logs": "操作履歴",
   "Create template": "テンプレートを作成",
@@ -1037,5 +1038,7 @@
   "Are you sure you want to hide this menu?": "このメニューを非表示にしますか？",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "非表示にすると、このメニューはメニューバーに表示されなくなります。再表示するには、ルート管理ページで設定する必要があります。",
   "If selected, the page will display Tab pages.": "選択されている場合、ページはタブページを表示します。",
-  "If selected, the route will be displayed in the menu.": "選択されている場合、ルートはメニューに表示されます。"
+  "If selected, the route will be displayed in the menu.": "選択されている場合、ルートはメニューに表示されます。",
+  "Deprecated": "非推奨",
+  "The following old template features have been deprecated and will be removed in next version.": "次の古いテンプレート機能は非推奨になり、次のバージョンで削除されます。"
 }
