--- a/packages/core/client/src/locale/ko-KR.json
+++ b/packages/core/client/src/locale/ko-KR.json
@@ -183,6 +183,7 @@
   "Chart type": "차트 유형",
   "Chart config": "차트 구성",
   "Templates": "템플릿",
+  "Template": "템플릿",
   "Select template": "템플릿 선택",
   "Action logs": "작업 로그",
   "Create template": "템플릿 생성",
@@ -910,5 +911,7 @@
   "Are you sure you want to hide this menu?": "이 메뉴를 숨기시겠습니까?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "숨기면 이 메뉴는 메뉴 바에 더 이상 표시되지 않습니다. 다시 표시하려면 라우트 관리 페이지에서 설정해야 합니다.",
   "If selected, the page will display Tab pages.": "선택되면 페이지는 탭 페이지를 표시합니다.",
-  "If selected, the route will be displayed in the menu.": "선택되면 라우트는 메뉴에 표시됩니다."
+  "If selected, the route will be displayed in the menu.": "선택되면 라우트는 메뉴에 표시됩니다.",
+  "Deprecated": "사용 중단됨",
+  "The following old template features have been deprecated and will be removed in next version.": "다음 오래된 템플릿 기능은 사용 중단되었으며 다음 버전에서 제거될 것입니다."
 }
