--- a/packages/core/client/src/locale/ru-RU.json
+++ b/packages/core/client/src/locale/ru-RU.json
@@ -102,6 +102,7 @@
   "Chart type": "Тип диаграммы",
   "Chart config": "Конфиг. диаграммы",
   "Templates": "Шаблоны",
+  "Template": "Шаблон",
   "Select template": "Выбрать шаблон",
   "Action logs": "Журналы действий",
   "Create template": "Создать шаблон",
@@ -605,5 +606,7 @@
   "Are you sure you want to hide this menu?": "Вы уверены, что хотите скрыть это меню?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "После скрытия этого меню он больше не будет отображаться в меню. Чтобы снова отобразить его, вам нужно будет перейти на страницу управления маршрутами и настроить его.",
   "If selected, the page will display Tab pages.": "Если выбран, страница будет отображать страницы с вкладками.",
-  "If selected, the route will be displayed in the menu.": "Если выбран, маршрут будет отображаться в меню."
+  "If selected, the route will be displayed in the menu.": "Если выбран, маршрут будет отображаться в меню.",
+  "Deprecated": "Устаревший",
+  "The following old template features have been deprecated and will be removed in next version.": "Следующие старые функции шаблонов устарели и будут удалены в следующей версии."
 }
