--- a/packages/core/client/src/locale/tr-TR.json
+++ b/packages/core/client/src/locale/tr-TR.json
@@ -102,6 +102,7 @@
   "Chart type": "Grafik türü",
   "Chart config": "Grafik yapılandırması",
   "Templates": "Şablonlar",
+  "Template": "Şablon",
   "Select template": "Şablon seç",
   "Action logs": "Eylem günlükleri",
   "Create template": "Şablon oluştur",
@@ -603,5 +604,7 @@
   "Are you sure you want to hide this menu?": "Bu menüyü gizlemek istediğinizden emin misiniz?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "Gizlendikten sonra, bu menü artık menü çubuğunda görünmeyecektir. Tekrar görüntülemek için, yönlendirme yönetimi sayfasına gidip onu yapılandırmanız gerekecektir.",
   "If selected, the page will display Tab pages.": "Seçildiğinde, sayfa Tab sayfalarını görüntüleyecektir.",
-  "If selected, the route will be displayed in the menu.": "Seçildiğinde, yol menüde görüntülenecektir."
+  "If selected, the route will be displayed in the menu.": "Seçildiğinde, yol menüde görüntülenecektir.",
+  "Deprecated": "Kullanımdan kaldırıldı",
+  "The following old template features have been deprecated and will be removed in next version.": "Aşağıdaki eski şablon özellikleri kullanımdan kaldırıldı ve gelecek sürümlerde kaldırılacaktır."
 }
