--- a/packages/core/client/src/locale/uk-UA.json
+++ b/packages/core/client/src/locale/uk-UA.json
@@ -159,6 +159,7 @@
   "Chart type": "Тип діаграми",
   "Chart config": "Налаштування діаграми",
   "Templates": "Шаблони",
+  "Template": "Шаблон",
   "Select template": "Вибрати шаблон",
   "Action logs": "Журнал дій",
   "Create template": "Створити шаблон",
@@ -819,5 +820,7 @@
   "Are you sure you want to hide this menu?": "Ви впевнені, що хочете приховати це меню?",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "Після приховування цього меню він більше не з'явиться в меню. Щоб знову показати його, вам потрібно перейти на сторінку керування маршрутами і налаштувати його.",
   "If selected, the page will display Tab pages.": "Якщо вибрано, сторінка відобразить сторінки з вкладками.",
-  "If selected, the route will be displayed in the menu.": "Якщо вибрано, маршрут буде відображений в меню."
+  "If selected, the route will be displayed in the menu.": "Якщо вибрано, маршрут буде відображений в меню.",
+  "Deprecated": "Застаріло",
+  "The following old template features have been deprecated and will be removed in next version.": "Наступні старі функції шаблонів були застарілі і будуть видалені в наступній версії."
 }
