--- a/packages/core/client/src/locale/zh-TW.json
+++ b/packages/core/client/src/locale/zh-TW.json
@@ -183,6 +183,7 @@
   "Chart type": "圖表型別",
   "Chart config": "圖表設定",
   "Templates": "模板",
+  "Template": "模板",
   "Select template": "選擇模板",
   "Action logs": "動作日誌",
   "Create template": "建立模板",
@@ -910,6 +911,8 @@
   "Are you sure you want to hide this menu?": "你確定要隱藏這個菜單嗎？",
   "After hiding, this menu will no longer appear in the menu bar. To show it again, you need to go to the route management page to configure it.": "隱藏後，這個菜單將不再出現在菜單欄中。要再次顯示它，你需要到路由管理頁面進行設置。",
   "If selected, the page will display Tab pages.": "如果選中，該頁面將顯示標籤頁。",
-  "If selected, the route will be displayed in the menu.": "如果選中，該路由將顯示在菜單中。"
+  "If selected, the route will be displayed in the menu.": "如果選中，該路由將顯示在菜單中。",
+  "Deprecated": "已棄用",
+  "The following old template features have been deprecated and will be removed in next version.": "以下舊的模板功能已棄用，將在下個版本移除。"
 }
 
