feat: add calendar week translation

--- a/packages/plugins/@nocobase/plugin-calendar/src/locale/pl-PL.json
+++ b/packages/plugins/@nocobase/plugin-calendar/src/locale/pl-PL.json
@@ -42,6 +42,7 @@
     "Month": "Miesiąc",
     "Year": "Rok",
     "Day": "Dzień",
+    "Week": "Tydzień",
     "Yearly": "Co rok",
     "Repeats": "Powtarza się",
     "Background color field": "Pole koloru tła",
