--- a/packages/plugins/@nocobase/plugin-charts/src/locale/pl-PL.json
+++ b/packages/plugins/@nocobase/plugin-charts/src/locale/pl-PL.json
@@ -1,22 +1,22 @@
 {
-    "Edit": "Edit",
-    "Delete": "Delete",
-    "Cancel": "Cancel",
-    "Submit": "Submit",
-    "Actions": "Actions",
-    "Title": "Title",
-    "Enable": "Enable",
+    "Edit": "Edycja",
+    "Delete": "Usuń",
+    "Cancel": "Anuluj",
+    "Submit": "Wyślij",
+    "Actions": "Akcje",
+    "Title": "Tytuł",
+    "Enable": "Włącz",
     "SAML manager": "SAML manager",
-    "SAML Providers": "SAML Providers",
-    "Redirect url": "Redirect url",
-    "SP entity id": "SP entity id",
-    "Add provider": "Add",
-    "Edit provider": "Edit",
-    "Client id": "Client id",
-    "Entity id or issuer": "Entity id or issuer",
-    "Login Url": "Login Url",
-    "Public cert": "Public cert",
-    "Delete provider": "Delete",
-    "Are you sure you want to delete it?": "Are you sure you want to delete it?",
-    "Sign in button name, which will be displayed on the sign in page": "Sign in button name, which will be displayed on the sign in page"
+    "SAML Providers": "Dostawcy SAML",
+    "Redirect url": "Przekieruj adres URL",
+    "SP entity id": "Identyfikator podmiotu SP",
+    "Add provider": "Dodaj dostawcę",
+    "Edit provider": "Edytuj dostawcę",
+    "Client id": "Identyfikator klienta",
+    "Entity id or issuer": "Identyfikator podmiotu lub wystawcy",
+    "Login Url": "Adres URL logowania",
+    "Public cert": "Certyfikat publiczny",
+    "Delete provider": "Usuń dostawcę",
+    "Are you sure you want to delete it?": "Czy na pewno chcesz usunąć?",
+    "Sign in button name, which will be displayed on the sign in page": "Nazwa przycisku logowania, która będzie wyświetlana na stronie logowania"
   }
