--- a/packages/plugins/@nocobase/plugin-workflow-request/src/locale/pl-PL.json
+++ b/packages/plugins/@nocobase/plugin-workflow-request/src/locale/pl-PL.json
@@ -1,21 +1,25 @@
 {
-    "HTTP request": "Żądanie HTTP",
-    "Send HTTP request to a URL. You can use the variables in the upstream nodes as request headers, parameters and request body.": "Wyślij żądanie HTTP do adresu URL. Możesz użyć zmiennych z węzłów nadrzędnych jako nagłówków żądania, parametrów i treści żądania.",
-    "HTTP method": "Metoda HTTP",
-    "URL": "URL",
-    "Headers": "Nagłówki",
-    "Add request header": "Dodaj nagłówek żądania",
-    "Parameters": "Parametry",
-    "Add parameter": "Dodaj parametr",
-    "Body": "Treść",
-    "Use variable": "Użyj zmiennej",
-    "Format": "Format",
-    "Insert": "Wstaw",
-    "Timeout config": "Konfiguracja limitu czasu",
-    "ms": "ms",
-    "Input request data": "Wprowadź dane żądania",
-    "Only support standard JSON data": "Obsługiwane są tylko standardowe dane JSON",
-    "\"Content-Type\" only support \"application/json\", and no need to specify": "\"Content-Type\" obsługuje tylko \"application/json\" i nie wymaga podania",
-    "Ignore failed request and continue workflow": "Ignoruj nieudane żądanie i kontynuuj przepływ pracy"
-  }
-  
+  "HTTP request": "Żądanie HTTP",
+  "Send HTTP request to a URL. You can use the variables in the upstream nodes as request headers, parameters and request body.": "Wyślij żądanie HTTP do adresu URL. Możesz używać zmiennych z węzłów nadrzędnych jako nagłówków żądania, parametrów i treści żądania.",
+  "HTTP method": "Metoda HTTP",
+  "URL": "URL",
+  "Headers": "Nagłówki",
+  "Add request header": "Dodaj nagłówek żądania",
+  "Parameters": "Parametry",
+  "Add parameter": "Dodaj parametr",
+  "Body": "Treść żądania",
+  "Use variable": "Użyj zmiennej",
+  "Format": "Format",
+  "Insert": "Wstaw",
+  "Timeout config": "Konfiguracja limitu czasu",
+  "ms": "ms",
+  "Input request data": "Wprowadź dane żądania",
+  "Only support standard JSON data": "Obsługiwane są tylko standardowe dane JSON",
+  "Content-Type only support \"application/json\", and no need to specify": "Obsługiwany jest tylko \"application/json\", nie ma potrzeby podawania Content-Type",
+  "Ignore failed request and continue workflow": "Ignoruj nieudane żądanie i kontynuuj przepływ pracy",
+  "Add key-value pairs": "Dodaj pary klucz-wartość",
+  "Content-Type will be ignored from headers.": "Content-Type zostanie zignorowany w nagłówkach.",
+  "Status code": "Kod statusu",
+  "Data": "Dane",
+  "Response headers": "Nagłówki odpowiedzi"
+}
