--- a/packages/plugins/@nocobase/plugin-gantt/src/locale/pl-PL.json
+++ b/packages/plugins/@nocobase/plugin-gantt/src/locale/pl-PL.json
@@ -3,5 +3,7 @@
     "Time scale": "Skala czasu",
     "Start date field": "Pole daty rozpoczęcia",
     "Progress field": "Pole postępu",
-    "End date field": "Pole daty końcowej"
+    "End date field": "Pole daty końcowej",
+    "Duration":"Czas trwania",
+    "day(s)":"dzień/dni"
   }
