--- a/packages/plugins/@nocobase/plugin-kanban/src/locale/pl-PL.json
+++ b/packages/plugins/@nocobase/plugin-kanban/src/locale/pl-PL.json
@@ -4,5 +4,6 @@
     "Create sort field": "Utwórz pole sortowania",
     "Convert the following integer fields to sorting fields": "Przekonwertuj następujące pola całkowite na pola sortowania",
     "Sorting field": "Pole sortowania",
-    "Grouped sorting based on": "Sortowanie grupowe na podstawie"
+    "Grouped sorting based on": "Sortowanie grupowe na podstawie",
+    "Enable drag and drop sorting":"Włącz sortowanie przeciągnij upuść"
   }
