refactor: edit blokc title & description

--- a/packages/core/client/src/locale/zh-CN.json
+++ b/packages/core/client/src/locale/zh-CN.json
@@ -345,7 +345,7 @@
   "Subform mode": "子表单模式",
   "Field mode": "字段组件",
   "Allow add new data": "允许添加数据",
-  "Edit block title": "编辑区块标题",
+  "Edit block title & description": "编辑区块标题和描述",
   "Block title": "区块标题",
   "Pattern": "模式",
   "Operator": "运算符",
