--- a/packages/core/client/src/locale/zh-CN.json
+++ b/packages/core/client/src/locale/zh-CN.json
@@ -1081,5 +1081,6 @@
   "If selected, the page will display Tab pages.": "如果选中，该页面将显示标签页。",
   "If selected, the route will be displayed in the menu.": "如果选中，该路由将显示在菜单中。",
   "Deprecated": "已弃用",
-  "The following old templates have been deprecated and will be removed in next version.": "以下旧的模板功能已弃用，将在下个版本移除。"
+  "The following old templates have been deprecated and will be removed in next version.": "以下旧的模板功能已弃用，将在下个版本移除。",
+  "Full permissions": "全部权限"
 }
