--- a/packages/core/client/src/locale/pl-PL.json
+++ b/packages/core/client/src/locale/pl-PL.json
@@ -682,7 +682,9 @@
     "Danger red": "Czerwony",
     "Secondary confirmation": "Potwierdzenie dwuetapowe",
     "Perform the Custom request": "Wykonaj niestandardowe żądanie",
+    "Perform the {{title}}": "Wykonaj {{title}}",
     "Are you sure you want to perform the Custom request action?": "Czy na pewno chcesz wykonać akcję niestandardowego żądania?",
+    "Are you sure you want to perform the {{title}} action?": "Czy na pewno chcesz wykonać {{title}} żądania?",
     "Enable secondary confirmation": "Włącz potwierdzenie dwuetapowe",
     "Content": "Zawartość",
     "Refresh data on action": "Odśwież dane po akcji",
@@ -955,5 +957,11 @@
     "Changed to":"Zmień na",
     "Clear":"Wyczyść",
     "Current collection":"Aktualna kolekcja",
-    "Other collections":"Inne kolekcje"
+    "Other collections":"Inne kolekcje",
+    "Create inverse field in the target collection":"Utwórz pole odwrotne w kolekcji docelowej",
+    "Quick create":"Szybkie utworzenie",
+    "Dropdown":"Lista rozwijana",
+    "Pop-up":"Wyskakujące okienko",
+    "Save mode":"Tryb zapisu",
+    "No data":"Brak danych"
 }
