--- a/packages/core/client/src/locale/pl-PL.json
+++ b/packages/core/client/src/locale/pl-PL.json
@@ -950,7 +950,7 @@
     "Not selected": "Nie wybrano",
     "Enable link": "Włącz link",
     "Associate": "Kojarz",
-    "Associated records":"Powiązane rekordy"
+    "Associated records":"Powiązane rekordy",
     "Automatic close":"Zamknij automatycznie",
     "Manually close":"Zamknij manulanie",
     "Popup close method":"Metoda zamknięcia okna",
